fix margins on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -57,8 +57,8 @@
         grid-auto-flow: row;
         font-size: 25px;
         grid-gap: 10px;
-        margin: 10px 0px;
-        padding-left: 25%;
+        margin: 25px 0px;
+        padding-left: 17%;
       }
       .logo {
         display: grid;
